# cppimpact

./: .gitignore  BUILDING.md  CMakeLists.txt  FEA_debug.cu  README.md  test.cu
include/: dynamics.cuh
include/config/: common_definitions.h  simulation_config.h
include/materials/: elastoplastic.h  johnson_cook.h  linear_elastic.h
include/solver/: analysis.h  dynamics.cuh  dynamics.h  dynamics_kernels.cuh  dynamics_kernels.h  physics.h  tetrahedral.h  wall.h
include/utils/: cppimpact_blas.h
validation/: gpu_vel_smoke.txt  gpu_xloc_smoke.txt  validate.sh
